--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,7 @@ button {
 }
 
 /* text input settings */
-#search,
-#todo {
+#search {
   border-radius: var(--radius);
   outline: none;
 }
@@ -134,4 +133,14 @@ h2 {
   padding: 0 1rem;
   background-color: var(--grey-2);
   border-radius: var(--radius);
+}
+
+#reset {
+  text-transform: uppercase;
+  margin-top: 2rem;
+  color: var(--primary-text-color);
+  padding: 1rem 3rem;
+  cursor: pointer;
+  border-radius: 2rem;
+  border: 1px var(--light-coral) solid;
 }
